# omscs_ml_ul

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  ml_run.sh  pyproject.toml  requirements.txt
.claude/agents/: report-consistency-checker.md
REPORT_UL/: REPRO_UL_schinne3.tex  UL_Report_Reviewer_Response_schinne3.tex  UL_Report_schinne3.tex
REPORT_UL/tables/: report_numbers.tex  tab_phase2_clustering.tex  tab_phase3_reduction.tex  tab_phase4_silhouette.tex  tab_phase5_nn.tex  tab_phase6_nn.tex
REPORT_UL_original/: UL_Report_schinne3.tex
REPORT_UL_original/tables/: tab_phase4_silhouette.tex
Reviewer_Response/: implementation_plan.md  report_review.md  response_format.txt  reviewer_response_analysis.md
data/: wine.csv
documents/: TODO.md  copy_report_assets.sh  copy_report_to_overleaf.sh  copy_to_submission.sh  faq.md  latex_float_guide.md
documents/_archive/: phase_io_design.md  ul_execution_guide.md  ul_master_spec.md
documents/adr/: adr-001-wine-12-features.md  adr-002-frozen-k-values.md  adr-003-logging-pattern.md
documents/specs/: README.md  ul_execution_guide.md  ul_implementation_plan.md  ul_master_spec.md  ul_research_notes.md
documents/steering/: product.md  structure.md  tech.md
scripts/: bootstrap_metadata.py  run_phase_2_k_analysis.py  run_phase_2_raw_cluster.py  run_phase_3_raw_reduction.py  run_phase_4_reduced_cluster.py  run_phase_5_nn_reduced.py  run_phase_6_nn_cluster_features.py  run_phase_7_tsne.py  run_phase_8_report_tables.py  visualize_all.py
src/: config.py
tests/: test_data.py  test_unsupervised.py
(+31 files in other folders)
