[project]
name = "omscs-ml-ul"
version = "0.1.0"
description = "Unsupervised learning workspace for the OMSCS ML course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.39.2",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "scikit-learn-extra>=0.3.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.1",
    "pylint>=4.0.5",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "F403",
    "F405",
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "tests/*",
    "tests/**",
]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
include_trailing_comma = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
